--- a/config/traefik.yaml
+++ b/config/traefik.yaml
@@ -23,6 +23,6 @@ certificatesresolvers:
           - "1.1.1.1"
         delayBeforeCheck: 30
 providers:
-  docker:
-    endpoint: "unix:///var/run/docker.sock"
-    exposedByDefault: false
+  file:
+    directory: /etc/traefik/dynamic
+    watch: true
